// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
.c3 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c2 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

.c4 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c5 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

.c0 {
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  float: left;
  overflow: hidden;
  position: relative;
  z-index: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>
  <p
    aria-hidden="true"
    className="c2"
  >
    <span
      className="c3"
    >
      yoast.com
    </span>
  </p>
  <span
    className="c4"
  >
    YoastCon Workshops
  </span>
  <p
    className="c5"
  >
    Description to go along with a faulty image.
  </p>
</div>
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
.c3 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c2 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

.c4 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c5 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

.c0 {
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  float: left;
  overflow: hidden;
  position: relative;
  z-index: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>
  <p
    aria-hidden="true"
    className="c2"
  >
    <span
      className="c3"
    >
      yoast.com
    </span>
  </p>
  <span
    className="c4"
  >
    YoastCon Workshops
  </span>
  <p
    className="c5"
  >
    Description to go along with a landscape image.
  </p>
</div>
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
.c3 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c2 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

.c4 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c5 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

.c0 {
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  float: left;
  overflow: hidden;
  position: relative;
  z-index: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>
  <p
    aria-hidden="true"
    className="c2"
  >
    <span
      className="c3"
    >
      yoast.com
    </span>
  </p>
  <span
    className="c4"
  >
    YoastCon Workshops
  </span>
  <p
    className="c5"
  >
    Description to go along with a portrait image.
  </p>
</div>
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
.c3 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c2 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

.c4 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c5 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

.c0 {
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  float: left;
  overflow: hidden;
  position: relative;
  z-index: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>
  <p
    aria-hidden="true"
    className="c2"
  >
    <span
      className="c3"
    >
      yoast.com
    </span>
  </p>
  <span
    className="c4"
  >
    YoastCon Workshops
  </span>
  <p
    className="c5"
  >
    Description to go along with a square image.
  </p>
</div>
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
.c3 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c2 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

.c4 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

.c5 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

.c0 {
  background-color: #f2f3f5;
  max-width: none;
  border: none;
  box-shadow: none;
  border: 1px solid #dddfe2;
  border-radius: 0;
  zoom: 1;
  float: left;
  overflow: hidden;
  position: relative;
  z-index: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>
  <p
    aria-hidden="true"
    className="c2"
  >
    <span
      className="c3"
    >
      yoast.com
    </span>
  </p>
  <span
    className="c4"
  >
    YoastCon Workshops
  </span>
  <p
    className="c5"
  >
    Description to go along with too small an image.
  </p>
</div>
`;
